--- a/public/modules/channels/css/channels.client.styles.css
+++ b/public/modules/channels/css/channels.client.styles.css
@@ -8,7 +8,12 @@
 .style-4 input.focus {
   border-bottom: solid 2px #969696;
 }
-
+.style-4 label{
+  font-family: sans-serif;
+  font-size: 18px;
+  color: #A9A9A9;
+  font-weight: normal;
+}
 input {
   font-family: sans-serif;
   font-size: 18px;
@@ -19,6 +24,11 @@ input {
 }
 input:focus {
   outline: none;
+}
+
+input.number-field {
+  text-align:right;
+  width:70px;
 }
 
 .float-bottom {
@@ -59,4 +69,78 @@ div.icon-container .channelactive {
 
 div.icon-container .channelinactive {
   color:rgba(255,0,0,1);
+}
+
+div.dark {
+  background:rgba(0,0,0,0.9);
+}
+
+
+
+.btn-red {
+  float: left;
+  border: 1px solid #F00;
+  color: #F00;
+  background-color: transparent;
+}
+
+.btn-red:hover,
+.btn-red:focus {
+  border: 1px solid #F00;
+  outline: 0;
+  color: #000;
+  background-color: #F00;
+}
+
+td {
+  padding: 15px;
+}
+
+
+
+
+.onoffswitch {
+    position: relative; width: 90px;
+    -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
+}
+.onoffswitch-checkbox {
+    display: none;
+}
+.onoffswitch-label {
+    display: block; overflow: hidden; cursor: pointer;
+    border: 2px solid #999999; border-radius: 20px;
+}
+.onoffswitch-inner {
+    display: block; width: 200%; margin-left: -100%;
+    transition: margin 0.2s ease-in 0s;
+}
+.onoffswitch-inner:before, .onoffswitch-inner:after {
+    display: block; float: left; width: 50%; height: 30px; padding: 0; line-height: 30px;
+    font-size: 14px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
+    box-sizing: border-box;
+}
+.onoffswitch-inner:before {
+    content: "ON";
+    padding-left: 10px;
+    background-color: #42DCA3; color: #FFFFFF;
+}
+.onoffswitch-inner:after {
+    content: "OFF";
+    padding-right: 10px;
+    background-color: #EEEEEE; color: #999999;
+    text-align: right;
+}
+.onoffswitch-switch {
+    display: block; width: 29px; margin: 0.5px;
+    background: #FFFFFF;
+    position: absolute; top: 0; bottom: 0;
+    right: 56px;
+    border: 2px solid #999999; border-radius: 20px;
+    transition: all 0.2s ease-in 0s; 
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
+    margin-left: 0;
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
+    right: 0px; 
 }
