Changes titles to Cyphor

--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -7,7 +7,7 @@
                 <i class="fa fa-bars"></i>
             </button>
             <a class="navbar-brand page-scroll" href="#page-top">
-                <i class="fa fa-play-circle"></i>  <span class="light">Crypto</span>Layer
+                <i class="fa fa-play-circle"></i>  Cyphor
             </a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
