--- a/public/modules/users/views/users.client.view.html
+++ b/public/modules/users/views/users.client.view.html
@@ -23,7 +23,7 @@
                 <div class="row" id="signinform" ng-show="formid == 'signinform'">
                    
                     <div class="col-md-8 col-md-offset-2">
-                        <h1>Crypto<a>Layer</a></h1>
+                        <h1>Cyphor</h1>
                         
                         <form class="style-4" name="signin" ng-submit="signinFunction()">
                             <div class="form-group">
@@ -49,7 +49,7 @@
                 <div class="row ng-hide" id="signupform" ng-show="formid == 'signupform'">
                    
                     <div class="col-md-8 col-md-offset-2">
-                        <h1>Crypto<a>Layer</a></h1>
+                        <h1>Cyphor</h1>
                         
                         <form class="style-4" name="signin" ng-submit="signinFunction()">
                             <div class="form-group">
